--- a/ApiGateways/XProject.Gateway/Properties/launchSettings.json
+++ b/ApiGateways/XProject.Gateway/Properties/launchSettings.json
@@ -11,8 +11,8 @@
     "XProject.Gateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7102;http://localhost:5102",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:7102;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
