--- a/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
+++ b/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
