--- a/Services/Account/XProject.Account/XProject.Account.Api.csproj
+++ b/Services/Account/XProject.Account/XProject.Account.Api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\XProject.Account.Application\XProject.Account.Application.csproj" />
+  </ItemGroup>
+
 </Project>
