--- a/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
+++ b/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\XProject.Shared\XProject.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
