--- a/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
+++ b/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mappings\" />
+    <Folder Include="Operations\Accounts\Commands\" />
+    <Folder Include="Operations\Accounts\Queries\" />
   </ItemGroup>
 
 </Project>
