--- a/Services/Account/XProject.Account.Infrastructure/XProject.Account.Infrastructure.csproj
+++ b/Services/Account/XProject.Account.Infrastructure/XProject.Account.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\XProject.Account.Domain\XProject.Account.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
