--- a/Services/Account/XProject.Account.Domain/XProject.Account.Domain.csproj
+++ b/Services/Account/XProject.Account.Domain/XProject.Account.Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Entities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
 </Project>
