--- a/Services/Account/XProject.Account/Properties/launchSettings.json
+++ b/Services/Account/XProject.Account/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "XProject.Account": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5012",
       "environmentVariables": {
