--- a/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
+++ b/Services/Account/XProject.Account.Application/XProject.Account.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Mappings\" />
+    <Folder Include="Models\Settings\" />
     <Folder Include="Operations\Accounts\Queries\" />
   </ItemGroup>
 
