--- a/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
+++ b/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\..\..\Shared\XProject.Shared\XProject.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
