--- a/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
+++ b/Services/IdentityServer/XProject.Identity.Infrastructure/XProject.Identity.Infrastructure.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\IdentityServer\PersistedGrantDb\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
