--- a/Services/IdentityServer/XProject.IdentityServer/XProject.IdentityServer.csproj
+++ b/Services/IdentityServer/XProject.IdentityServer/XProject.IdentityServer.csproj
@@ -29,6 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings.Local.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
